# github-action-repo-sync

./: .gitignore  .prettierignore  .prettierrc.js  README.md  action.yml  cspell.config.js  cspell.config.ts  entrypoint.sh  error-matcher.json  eslint.config.ts  metadata.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  repo-metadata-sync.yml  set-github-metadata.yml  sync-metadata.yml
scripts/: build.ts
src/: github.ts  index.ts  metadata.ts
test/: bundle.test.ts  github.test.ts  index.test.ts  metadata.test.ts
test/fixtures/: codemeta-basic.json  codemeta-coderepository-fallback.json  codemeta-git-url.json  codemeta-string-keywords.json  gemspec-basic.gemspec  package-basic.json  package-git-url.json  package-merge-test.json  package-priority-test.json  package-repo-fallback.json  package-repository-fallback.json  pyproject-basic.toml  pyproject-poetry-only.toml  pyproject-project-only.toml  pyproject-project-urls.toml  setup-py-basic.py
