[project]
description = "A sample Python project"
keywords = ["python", "example", "demo"]
readme = "README.md"

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/user/repo"
"Bug Tracker" = "https://github.com/user/repo/issues"

# Or with Poetry:
[tool.poetry]
description = "A sample Python project"
homepage = "https://example.com"
repository = "https://github.com/user/repo"
keywords = ["python", "example", "demo"]
